# text-to-sql

./: .env.example  .gitignore  README.md  financial_schema.md  main.py  pyproject.toml  schema_metadata.json
core/: __init__.py  correction_graph.py  llm_client.py  schema_introspect.py
docs/: self_correction_loop.md
eval/: README.md  __init__.py  evaluate.py  runner.py  store.py
eval/dataset/: financial_ko.json
migrations/: apply_schema_metadata.py
tests/: conftest.py  test_correction_graph.py  test_dataset.py  test_eval_store.py  test_execution_accuracy.py  test_schema_linking.py
